--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,14 @@ body {
 }
 
 .bottom-banner {
-  background: url(images/dream-bg.png);
-  background-repeat: no-repeat;
+  position: relative;
+}
+
+.bottom-image {
+  position: absolute;
+  right: 0;
+  bottom: 20px;
+  z-index: -1;
 }
 
 .banner {
@@ -26,7 +32,6 @@ body {
   display: flex;
   justify-content: space-between;
   height: 60vh;
-  /* overflow: hidden; */
 }
 
 .link-btn {
