--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body {
 .top-banner {
   background: url(images/top-banner.png);
   background-repeat: no-repeat;
-  margin-bottom: 50px;
 }
 
 .bottom-banner {
@@ -23,15 +22,15 @@ body {
 .bottom-image {
   position: absolute;
   right: 0;
-  bottom: 20px;
+  bottom: 10%;
   z-index: -1;
 }
 
 .banner {
-  padding: 40px 80px;
+  padding: 5%;
   display: flex;
   justify-content: space-between;
-  height: 60vh;
+  margin-bottom: 10%;
 }
 
 .link-btn {
@@ -45,14 +44,55 @@ h1 {
   font-size: 50px;
 }
 
-.name-highlight {
+.orange-highlight {
   color: orange;
 }
 
 .half-width {
-  width: 35%;
+  width: 45%;
+  padding: 1rem;
 }
 
 .half-width img {
-  width: 75%;
+  width: 100%;
+}
+
+.experience-area {
+  background-image: url(images/exp-bg.png);
+  background-position: left;
+  background-repeat: no-repeat;
+  padding: 5%;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  height: 60vh;
+}
+
+
+.exp {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+}
+
+.exp-i {
+  box-shadow: 10px 10px 40px gray;
+  height: 320px;
+  border-radius: 5px;
+}
+
+.exp-i:nth-child(2){
+  border-left: 7px solid;
+  border-image: linear-gradient(180deg, lightSalmon, tomato);
+  border-image-slice: 1;
+}
+.exp-i:nth-child(3){
+  border-left: 7px solid;
+  border-image: linear-gradient(180deg, blue, cyan);
+  border-image-slice: 1;
+}
+
+footer {
+  text-align: center;
 }
